<resources>
    <string name="app_name">HowsToday</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">1066382003710815</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1066382003710815</string>

    <!-- 하단 내비게이션 -->
    <string name="action_posts">Posts</string>
    <string name="action_rooms">Rooms</string>
    <string name="action_talks">Talks</string>
    <string name="action_friends">Friends</string>
    <string name="action_profile">Profile</string>


    <string name="accountDeleteDescription">
        회원탈퇴를 할 경우\n
        모든 정보는 즉시 삭제되며,
        \n이후 복구가 절대로 불가능합니다.\n
        그래도 하시겠습니까?
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
